Add projects and dialogs

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,11 +11,11 @@
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
     --primary: 24 9.8% 10%;
-    --primary-foreground: 60 9.1% 97.8%;
+    --primary-foreground: 60 9.1% 100%;
     --secondary: 60 4.8% 95.9%;
     --secondary-foreground: 24 9.8% 10%;
-    --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 44.7%;
+    --muted: 60 4.8% 100%;
+    --muted-foreground: 25 5.3% 100%;
     --accent: 60 4.8% 95.9%;
     --accent-foreground: 24 9.8% 10%;
     --destructive: 0 84.2% 60.2%;
@@ -37,7 +37,7 @@
     --card: 20 14.3% 4.1%;
     --card-foreground: 60 9.1% 97.8%;
     --popover: 20 14.3% 4.1%;
-    --popover-foreground: 60 9.1% 97.8%;
+    --popover-foreground: 60 9.1% 100%;
     --primary: 60 9.1% 97.8%;
     --primary-foreground: 24 9.8% 10%;
     --secondary: 12 6.5% 15.1%;
@@ -65,6 +65,18 @@
   }
 }
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 body {
   background-color: hsla(221, 38%, 14%, 1);
   background-image: radial-gradient(
@@ -83,12 +95,24 @@ h1 {
 h2 {
   @apply text-xl text-white md:text-2xl lg:text-3xl font-medium;
 }
+h3 {
+  @apply text-lg text-white md:text-xl lg:text-2xl font-medium;
+}
 
 p {
-  @apply text-secondary text-base font-light;
+  @apply text-gray-400 text-base font-light;
 }
 
 .button {
   @apply text-white bg-[#7798bd2a] py-2 px-6 rounded-full border-t border-[#9893cc36] cursor-pointer shadow-md transition duration-200;
   @apply hover:bg-primary_dark hover:-translate-y-0.5;
+}
+
+.tag {
+  @apply bg-slate-800 rounded-full text-xs px-2 py-1 text-slate-500;
+}
+
+.project-link {
+  @apply text-primary font-semibold;
+  @apply hover:underline hover:underline-offset-8;
 }
