--- a/app/globals.css
+++ b/app/globals.css
@@ -124,7 +124,7 @@ p {
 }
 
 .button {
-  @apply text-white bg-[#7798bd2a] py-2 px-6 rounded-full border-t border-[#616a9136] cursor-pointer transition duration-200;
+  @apply text-white justify-center text-center w-max h-max mx-auto bg-[#7798bd2a] py-2 px-6 rounded-full border-t border-[#616a9136] cursor-pointer transition duration-200;
   @apply hover:bg-primary_dark hover:-translate-y-0.5;
 }
 
