--- a/app/globals.css
+++ b/app/globals.css
@@ -148,7 +148,7 @@ span {
 }
 
 .skill-box {
-  @apply bg-box text-zinc-400 hover:text-zinc-200 transition duration-200 rounded-xl p-4 flex items-center gap-4 select-none;
+  @apply bg-zinc-800/40 text-zinc-400 transition duration-200 rounded-xl p-4 flex items-center gap-4 select-none;
 }
 
 .contact-title {
@@ -208,4 +208,8 @@ span {
 
 .button-primary {
   @apply bg-primary text-black rounded-md px-6 py-3 text-sm font-semibold hover:bg-white duration-300;
+}
+
+.button-secondary {
+  @apply bg-zinc-800/20 border-2 border-zinc-700 text-zinc-300 hover:border-primary hover:text-primary rounded-md px-6 py-3 text-sm font-semibold duration-300;
 }
