--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,11 @@
   }
 }
 
+::selection {
+  background-color: #ecc72231;
+  color: #ecc722;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -115,10 +120,10 @@ body {
 }
 
 h1 {
-  @apply text-2xl text-white md:text-3xl lg:text-5xl font-semibold;
+  @apply text-4xl text-white md:text-3xl lg:text-5xl font-bold;
 }
 h2 {
-  @apply text-xl text-white md:text-2xl lg:text-3xl font-medium;
+  @apply text-3xl text-white md:text-2xl lg:text-4xl font-bold;
 }
 h3 {
   @apply text-base text-white md:text-lg lg:text-lg font-medium;
