--- a/app/globals.css
+++ b/app/globals.css
@@ -144,7 +144,7 @@ span {
 }
 
 .tag {
-  @apply bg-zinc-800/40 rounded-full text-center text-xs px-3 py-1 text-zinc-500;
+  @apply bg-stone-800/40 rounded-full text-center text-xs px-3 py-1 text-stone-500;
 }
 
 .project-link {
@@ -153,11 +153,11 @@ span {
 }
 
 .skill-box {
-  @apply bg-zinc-800/40 text-zinc-400 transition duration-200 rounded-xl p-4 flex items-center gap-4 select-none;
+  @apply bg-stone-800/40 text-stone-400 transition duration-200 rounded-xl p-4 flex items-center gap-4 select-none;
 }
 
 .contact-title {
-  @apply text-zinc-500 text-base font-light;
+  @apply text-stone-500 text-base font-light;
 }
 
 .contact-link {
@@ -165,8 +165,8 @@ span {
 }
 
 .nav-link {
-  @apply text-zinc-400 cursor-pointer py-3 px-6 rounded-lg;
-  @apply hover:text-zinc-100 hover:bg-box;
+  @apply text-stone-400 cursor-pointer py-3 px-6 rounded-lg;
+  @apply hover:text-stone-100 hover:bg-box;
 }
 
 .nav-dropdown {
@@ -216,9 +216,9 @@ span {
 }
 
 .button-secondary {
-  @apply bg-zinc-800/20 border-2 border-zinc-700 text-zinc-300 hover:border-primary hover:text-primary rounded-md px-6 py-3 text-sm font-semibold duration-300;
+  @apply bg-stone-800/20 border-2 border-stone-700 text-stone-300 hover:border-primary hover:text-primary rounded-md px-6 py-3 text-sm font-semibold duration-300;
 }
 
 .button-secondary-disabled {
-  @apply cursor-not-allowed border-2 border-zinc-800 text-zinc-600 rounded-md px-6 py-3 text-sm font-semibold;
+  @apply cursor-not-allowed border-2 border-stone-800 text-stone-600 rounded-md px-6 py-3 text-sm font-semibold;
 }
